fix letter-spacing, image fit

--- a/blocks/lead/__caption/lead__caption.css
+++ b/blocks/lead/__caption/lead__caption.css
@@ -3,7 +3,7 @@
   max-width: 984px;
   margin: .5rem auto 0;
   font: 10px/1.2 'Inter', Arial, sans-serif;
-  letter-spacing: .15;
+  letter-spacing: .15em;
   text-transform: uppercase;
 }
 
