--- a/blocks/lead/__img/lead__img.css
+++ b/blocks/lead/__img/lead__img.css
@@ -1,6 +1,7 @@
 .lead__img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
 }
 
 @media screen and (min-width: 768px) {
